--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "hogan": "1.0.5-dev",
         "moment": "1.4.0",
         "redis": "0.7.1",
-        "request": "2.9.100"
+        "request": "2.9.100",
         "feedparser": "0.9.5"
     }
 }
