Fixed my git info

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "optimist": "0.3.1",
         "express": "2.2.0",
         "async": "0.1.16",
+	"crypt": "0.0.1",
         "sha1": "0.0.1",
         "hogan": "1.0.5-dev",
         "moment": "1.4.0",
