Added rss feeds as output

--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
         "optimist": "0.3.1",
         "express": "2.2.0",
         "async": "0.1.16",
-	"crypt": "0.0.1",
+        "crypt": "0.0.1",
         "sha1": "0.0.1",
         "hogan": "1.0.5-dev",
         "moment": "1.4.0",
         "redis": "0.7.1",
         "request": "2.9.100",
-        "feedparser": "0.9.5"
+        "feedparser": "0.9.5",
+        "rss": "0.0.3"
     }
 }
