--- a/public/apps/velocity.plist
+++ b/public/apps/velocity.plist
@@ -11,15 +11,17 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://light.hyveshq:3000/apps/velocity.ipa</string>
+					<string>http://hanno.hyves.org/apps/Telegraaf.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>hyves.velocity</string>
+				<string>hyves.telegraaf</string>
 				<key>kind</key>
 				<string>software</string>
+				<key>subtitle</key>
+				<string>De nummer 1 in nieuws!</string>
 				<key>title</key>
 				<string>Telegraaf</string>
 			</dict>
