--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "redis": "0.7.1",
         "request": "2.9.100",
         "feedparser": "0.9.5",
-        "rss": "0.0.3"
+        "rss": "0.0.3",
+        "imagemagick": "0.1.2"
     }
 }
